# CONSTELLATION

./: .gitignore  API.md  CHANGELOG.md  METHODS_NOTES.md  README.md  pyproject.toml
docs/: _config.yml  api.md  changelog.md  index.md  methods.md
examples/: analysis_workflow.py
notebooks/: crc_analysis.ipynb  crc_preprocessing.ipynb  lymphnode_annotation.ipynb
src/constellation/: __init__.py  io.py  ontology.py  testing.py  visualization.py
tutorials/crc/: tutorial_annotate_compartments.ipynb  tutorial_crc_constellation.ipynb
tutorials/lymph_node/: tutorial_annotate_lymphnode.ipynb  tutorial_lymphnode.ipynb
tutorials/oc/: tutorial_annotate_oc.ipynb  tutorial_oc.ipynb
