[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constellation"
version = "0.4.0"
description = "CONSTELLATION: CONtext-Specific spaTial cELLulAr inTeractions In OrgaNs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "scanpy>=1.9",
    "scikit-learn>=1.0",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "statsmodels>=0.13",
    "requests>=2.25",
    "tqdm>=4.62",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["src"]
